syntax = "proto3";

option java_multiple_files = true;
option java_package = "recommendation";

service Recommendation {
  rpc getUserGroupMembersByGroupId(GetUserGroupMemberByGroupId) returns (GetUserIds);
  rpc getUserAllGroupsMembersByUserId(GetUserGroupMemberByUserId) returns (GetUserIds);
  rpc getUserFollowingByUserId(GetUserFollowingUserId) returns (GetUserIds);
}

message GetUserGroupMemberByGroupId {
  string groupId = 1;
}

message GetUserGroupMemberByUserId {
  string userId = 1;
}

message GetUserFollowingUserId {
  string userId = 1;
}

message GetUserIds {
  repeated string userIds = 1;
}